# otus-6

./: .clang-tidy  CMakeLists.txt  compile_commands.json
examples/decorator/: CMakeLists.txt
src/: main.cpp  matrix.hpp  my_allocator.hpp
